[#284] fixes warnings about reflective access